# SP-CCI

./: README.md  pyproject.toml  requirements-rt.txt  requirements.txt
data/: README.md  user_connection_data.npz
scripts/: make_figures.py  run_ihdp.py  run_sionna.py  run_synthetic.py  utils.py
sp_cci/: __init__.py  cci.py  data_ihdp.py  data_synthetic.py  metrics.py  plotting.py  spcci.py
